--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,6 +25,8 @@
                     <li><a href="{% url 'about' %}">About Us</a></li>
                     <li><a href="{% url 'plant-index' %}">All Plants</a></li>
                     <li><a href="{% url 'plant-create' %}">Add a Plant</a></li>
+                    <li><a href="{% url 'fertilizer-index' %}">All Fertilizers</a></li>
+                    <li><a href="{% url 'fertilizer-create' %}">Add a Fertilizer</a></li>
                 </ul>
             </nav>
         </header>
