--- a/main_app/templates/main_app/plant_detail.html
+++ b/main_app/templates/main_app/plant_detail.html
@@ -22,5 +22,66 @@
             <a href="{% url 'plant-delete' plant.id %}" class="btn danger">Delete</a>
         </div>
     </div>
+    <h3>Add a Watering</h3>
+    <form 
+    action="{% url 'add-watering' plant.id %}" 
+    method="POST"
+    class='subsection-content'
+    autocomplete='off'
+    >
+        {% csrf_token %}
+        {{ watering_form.as_p }}
+        <button type="submit" class="btn submit">Add Watering</button>
+    </form>
+    <div class="watering-history">
+        <h3>Watering Schedule</h3>
+        <table class="watering-table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Method</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for watering in plant.waterings.all %}
+                <tr>
+                    <td>{{ watering.date }}</td>
+                    <td>{{ watering.method }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="2">No watering history yet. Go hydrate this plant!</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div class="fertilizer-section">
+        <h3>Applied Fertilizers</h3>
+        <ul>
+            {% for fertilizer in plant.fertilizers.all %}
+                <li>{{ fertilizer.name }} by {{ fertilizer.brand }}</li>
+            {% empty %}
+                <li>No fertilizers applied yet.</li>
+            {% endfor %}
+        </ul>
+
+        <h4>Available Fertilizers</h4>
+        {% if unassigned_fertilizers.count %}
+            <ul>
+            {% for fertilizer in unassigned_fertilizers %}
+                <li>
+                    {{ fertilizer.name }} 
+                    <form action="{% url 'assoc-fertilizer' plant.id fertilizer.id %}" method="POST" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="btn submit">Add</button>
+                    </form>
+                </li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>All available fertilizers have been added to this plant.</p>
+        {% endif %}
+    </div>
 </section>
 {% endblock %}
