--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -26,7 +26,7 @@
                     <li><a href="{% url 'plant-index' %}">All Plants</a></li>
                     <li><a href="{% url 'plant-create' %}">Add a Plant</a></li>
                     <li><a href="{% url 'fertilizer-index' %}">All Fertilizers</a></li>
-                    <li><a href="{% url 'fertilizer-create' %}">Add a Fertilizer</a></li>
+                    {% comment %} <li><a href="{% url 'fertilizer-create' %}">Add a Fertilizer</a></li> {% endcomment %}
                 </ul>
             </nav>
         </header>
